@@ -14,12 +14,40 @@
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
+from __future__ import absolute_import
 
-import re
-from tulip import directory, client, control
+from sys import argv
+from tulip.compat import parse_qsl
+from resources.lib import fashiontv
 
-html = client.request('https://embed.cloudycdn.services/ftv/4dg_paris/?autoplay&player=hls')
+syshandle = int(argv[1])
+sysaddon = argv[0]
+params = dict(parse_qsl(argv[2].replace('?','')))
 
-stream = 'https:' + re.search(r"'(.+m3u8)'", html).group(1)
+########################################################################################################################
 
-directory.resolve(stream, meta={'title': 'Fashion TV Paris'}, icon=control.icon(), resolved_mode=False)
+action = params.get('action')
+url = params.get('url')
+
+########################################################################################################################
+
+if action is None:
+
+    fashiontv.Indexer().root()
+
+elif action == 'live':
+
+    fashiontv.Indexer().live()
+
+elif action == 'play':
+
+    fashiontv.Indexer().play(url)
+
+elif action == 'youtube':
+
+    fashiontv.Indexer().yt(url)
+
+elif action == 'cache_clear':
+
+    from tulip.cache import clear
+    clear(withyes=False)
