@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.fashiontv.com" version="0.0.1~alpha1" name="Fashion TV Player" provider-name="Twilight0">
+<addon id="plugin.video.fashiontv.com" version="1.0.0" name="Fashion TV Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="2.5.11" />
+		<import addon="script.module.tulip" version="2.6.1" />
+		<import addon="plugin.video.youtube" version="6.8.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -19,14 +20,17 @@
 		<source>https://github.com/Twilight0/plugin.video.fashiontv.com</source>
 		<website>https://www.fashiontv.com/</website>
 		<size>228454</size>
-		<news>[B]0.0.1~alpha1[/B]
+		<news>[B]1.0.0[/B]
+- Final stable version
+
+[B]0.0.1~alpha1[/B]
 - Initial version</news>
 		<assets>
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
 		<platform>all</platform>
-		<language>en el</language>
+		<language>en</language>
 		<!--<forum></forum>-->
 		<!--<email></email>-->
 	</extension>
